[package]
name = "crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = { version = "0.10.9", features = ["asm"] }
ed25519-dalek = { version = "2.0", default-features = false, features = [
    "zeroize",
    "rand_core",
    "fast",
] }
rand = "0.8"
base64 = "0.22.1"
time = "0.3.44"
rayon = "1.11.0"
libp2p = "0.56.0"
